exports[`test functions.js 1`] = `
"const a = () => \"Foo bar\";

function b(object, key) {
  return object[\'key\'];
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
const a = () => \"Foo bar\";

function b(object, key) {
  return object[\"key\"];
}
"
`;

exports[`test functions.js 2`] = `
"const a = () => \"Foo bar\";

function b(object, key) {
  return object[\'key\'];
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
const a = () => \'Foo bar\';

function b(object, key) {
  return object[\'key\'];
}
"
`;

exports[`test strings.js 1`] = `
"\"abc\"
\'abc\'

\'\\\'\'

\'\"\'
\'\\\"\'
\'\\\\\"\'

\"\'\"
\"\\\'\"
\"\\\\\'\"

\"\'\\\"\"
\'\\\'\"\'

\'\\\\\'
\"\\\\\"

\'\\0\'
\'🐶\'
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\"abc\";
\"abc\";

\"\'\";

\'\"\';
\'\"\';
\'\\\\\"\';

\"\'\";
\"\'\";
\"\\\\\'\";

\"\'\\\"\";
\"\'\\\"\";

\"\\\\\";
\"\\\\\";

\"\\0\";
\"\\uD83D\\uDC36\";
"
`;

exports[`test strings.js 2`] = `
"\"abc\"
\'abc\'

\'\\\'\'

\'\"\'
\'\\\"\'
\'\\\\\"\'

\"\'\"
\"\\\'\"
\"\\\\\'\"

\"\'\\\"\"
\'\\\'\"\'

\'\\\\\'
\"\\\\\"

\'\\0\'
\'🐶\'
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\'abc\';
\'abc\';

\"\'\";

\'\"\';
\'\"\';
\'\\\\\"\';

\"\'\";
\"\'\";
\"\\\\\'\";

\'\\\'\"\';
\'\\\'\"\';

\'\\\\\';
\'\\\\\';

\'\\0\';
\'\\uD83D\\uDC36\';
"
`;
